- Fixed problem with explicit interface specifier.
- Excluded methods inherited from System.Object.